--- a/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
+++ b/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
@@ -22,10 +22,13 @@
   </ng-container>
   <ng-container matColumnDef="edit">
     <th mat-header-cell *matHeaderCellDef> edit </th>
-    <td mat-cell *matCellDef="let element" style="width: 300px;">
-      <img style="cursor: pointer;" src="../../../../assets/dots.png" alt="" (click)="onEditDelete($event,element)">
+    <td class="d-flex  align-items-center" mat-cell *matCellDef="let element" style="width: auto;">
+      <div class="m-2">
+
+        <img style="cursor: pointer;" src="../../../../assets/dots.png" alt="" (click)="onEditDelete($event,element)">
+      </div>
       <div *ngIf="element.showButtons">
-        <button class="btn btn-primary" (click)="onEdit(element)">
+        <button class="btn btn-primary m-2" (click)="onEdit(element)">
           edit
         </button>
         <button class="btn btn-danger" (click)="onDelete(element)">
