feat: add minor fixes restructure code

--- a/src/app/booking/components/flights-search-input/flights-search-input.component.html
+++ b/src/app/booking/components/flights-search-input/flights-search-input.component.html
@@ -1,13 +1,13 @@
-<div class="container-md d-flex ">
-    <span>starting point</span>
-    <span><img src="../../../assets/flightPath.png" alt="plane"></span>
-    <div>
-        <span>return</span>
-        <span><img src="../../../assets/dot.png" alt="dot"></span>
-        <span>arrive date</span>
-        <span><img src="../../../assets/dot.png" alt="dot"></span>
-        <span>passanger number</span>
-        <span><img src="../../../assets/passenger.png" alt="passanger"></span>
-    </div>
-    <a href="" style="margin-left: 15px; text-decoration: none;">edit</a>
-    </div>
+<div class="container-md d-flex">
+  <span>starting point</span>
+  <span><img src="../../../assets/flightPath.png" alt="plane" /></span>
+  <div>
+    <span>return</span>
+    <span><img src="../../../assets/dot.png" alt="dot" /></span>
+    <span>arrive date</span>
+    <span><img src="../../../assets/dot.png" alt="dot" /></span>
+    <span>passanger number</span>
+    <span><img src="../../../assets/passenger.png" alt="passanger" /></span>
+  </div>
+  <a href="" style="margin-left: 15px; text-decoration: none">edit</a>
+</div>
