--- a/src/app/summary/summary-view/summary-view.component.html
+++ b/src/app/summary/summary-view/summary-view.component.html
@@ -1,13 +1,15 @@
-<div class="container ">
-    <h2>Summary</h2>
-   <app-flight-details></app-flight-details>
-    <app-flight-fare></app-flight-fare>
-    <br>
-    <div class="d-flex justify-content-end">
-    <div class="buttons col-6 d-flex justify-content-between align-items-center">
-        <a href="" class="link">back</a>
-        <a href="" class="btn btn-light">Add to order cart</a>
-        <a href="" class="btn btn-primary">Buy now</a>
+<div class="container">
+  <h2>Summary</h2>
+  <app-flight-details></app-flight-details>
+  <app-flight-fare></app-flight-fare>
+  <br />
+  <div class="d-flex justify-content-end">
+    <div
+      class="buttons col-6 d-flex justify-content-between align-items-center"
+    >
+      <a href="" class="link">back</a>
+      <a href="" class="btn btn-light">Add to order cart</a>
+      <a href="" class="btn btn-primary">Buy now</a>
     </div>
-</div>
+  </div>
 </div>
