--- a/src/app/user-authentication/authentication-form-container/authentication-form-container.component.html
+++ b/src/app/user-authentication/authentication-form-container/authentication-form-container.component.html
@@ -1,8 +1,17 @@
 <div class="container--buttons">
-    <mat-toolbar (click)="onLoginActive()" [class.active]="!isActive" class="login-toolbar btn btn-primary active" >Log In</mat-toolbar>
-    <mat-toolbar (click)="onRegisterActive()" [class.active]="isActive" class="login-toolbar btn btn-primary" >REGISTER</mat-toolbar>
+  <mat-toolbar
+    (click)="onLoginActive()"
+    [class.active]="!isActive"
+    class="login-toolbar btn btn-primary active"
+    >Log In</mat-toolbar
+  >
+  <mat-toolbar
+    (click)="onRegisterActive()"
+    [class.active]="isActive"
+    class="login-toolbar btn btn-primary"
+    >REGISTER</mat-toolbar
+  >
 </div>
 
-    <app-register *ngIf="isActive"></app-register>
-    <app-log-in *ngIf="!isActive"></app-log-in>
-
+<app-register *ngIf="isActive"></app-register>
+<app-log-in *ngIf="!isActive"></app-log-in>
