feat: add responsiveness

--- a/src/app/booking/components/flight-selected/flight-selected.component.html
+++ b/src/app/booking/components/flight-selected/flight-selected.component.html
@@ -1,4 +1,6 @@
-<div class="container d-flex align-items-center justify-content-between">
+<div
+  class="container d-flex align-items-center justify-content-between flex-wrap"
+>
   <div>
     <p>{{ flight.date | date : "mediumDate" }}</p>
     <!-- to do  -->
