--- a/src/app/passengers/components/passenger-each/passenger-each.component.html
+++ b/src/app/passengers/components/passenger-each/passenger-each.component.html
@@ -1,7 +1,9 @@
 <div class="container--form">
   <div class="d-flex flex-column" [formGroup]="control">
     <span>{{ count }}</span>
-    <div class="d-flex align-items-between justify-content-between w-100">
+    <div
+      class="d-flex align-items-between justify-content-between w-100 flex-wrap"
+    >
       <mat-form-field>
         <input
           autofocus
