--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,9 +1,11 @@
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <div class="container">
+<div class="">
+  <nav
+    class="d-flex justify-content-center navbar navbar-expand-lg bg-body-tertiary"
+  >
+    <div class="">
+      <div class="container-md">
         <button
-          class="navbar-toggler"
+          class="navbar-toggler float-left"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
