--- a/src/app/passengers/passengers-view/passengers-view.component.html
+++ b/src/app/passengers/passengers-view/passengers-view.component.html
@@ -19,8 +19,10 @@
   </div>
 
   <p>{{ passengersForm.value | json }}</p>
-  <div class="row justify-content-end">
-    <a routerLink=".." class="btn btn-warning col-3 me-3">back</a>
-    <button type="submit" class="btn btn-success col-3">continue</button>
+  <div class="row justify-content-end text-center">
+    <a style="width: 80px" routerLink=".." class="btn btn-warning me-3">back</a>
+    <button style="width: 100px" type="submit" class="btn btn-success me-3">
+      continue
+    </button>
   </div>
 </form>
