--- a/src/app/booking/components/one-side/one-side.component.css
+++ b/src/app/booking/components/one-side/one-side.component.css
@@ -6,6 +6,9 @@
   position: relative;
   padding-bottom: 16px;
 }
+.cards-container{
+  position: relative;
+}
 .highlighted {
   width: 100%;
   height: 6px;
@@ -24,4 +27,20 @@
   transform: scale(1.1) translateY(-13px);
   border: thin gray solid;
   box-shadow: gray 3px 3px 4px;
+}
+.arrows{
+  position: absolute;
+  transform: translateY(-50%);
+  top: 50%;
+  left: 0;
+  right: 0;
+}
+.arrows>img{
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 700px) {
+  .flight-card{
+    width: 45%;
+  }
 }
