--- a/src/app/core/progress-bar/progress-bar.component.html
+++ b/src/app/core/progress-bar/progress-bar.component.html
@@ -5,15 +5,15 @@
     userOnSummaryPage ||
     userOnShoppingCartPage
   "
-  class="progress--bar d-flex align-items-center justify-content-between"
+  class="progress--bar d-flex align-items-center justify-content-between flex-wrap"
 >
   <div class="first--step d-flex">
-    <img
+    <img class="img__prigress--bar"
       *ngIf="userOnBookingPage"
       src="../../../assets/Steps-inProgress.png"
       alt="inProgress"
     />
-    <img
+    <img class="img__prigress--bar"
       *ngIf="!userOnBookingPage"
       src="../../../assets/Steps-complete.png"
       alt="done"
@@ -21,20 +21,20 @@
     <span>Flights</span>
   </div>
   <div class="progress__bar--lineCont">
-    <img src="../../../assets/Steps-Divider.png" alt="" />
+    <img src="../../../assets/Steps-Divider.png" alt="divider" />
   </div>
   <div class="second--step d-flex">
-    <img
+    <img class="img__prigress--bar"
       *ngIf="userOnPassangersPage"
       src="../../../assets/Steps-inProgress.png"
       alt="inProgress"
     />
-    <img
+    <img class="img__prigress--bar"
       *ngIf="userOnSummaryPage || userOnShoppingCartPage"
       src="../../../assets/Steps-complete.png"
       alt="done"
     />
-    <img
+    <img class="img__prigress--bar"
       *ngIf="userOnBookingPage"
       src="../../../assets/Steps-second.png"
       alt="two"
@@ -47,17 +47,17 @@
 
   <div class="third--step d-flex align-items-center">
     <div class="d-flex" style="height: 24px">
-      <img
+      <img class="img__prigress--bar"
         *ngIf="userOnSummaryPage"
         src="../../../assets/Steps-inProgress.png"
         alt="inProgress"
       />
-      <img
+      <img class="img__prigress--bar"
         *ngIf="userOnShoppingCartPage"
         src="../../../assets/Steps-complete.png"
         alt="done"
       />
-      <img
+      <img class="img__prigress--bar"
         *ngIf="userOnPassangersPage || userOnBookingPage"
         src="../../../assets/Steps-third.png"
         alt="three"
