--- a/src/app/booking/components/flights-search-result/flights-search-result.component.html
+++ b/src/app/booking/components/flights-search-result/flights-search-result.component.html
@@ -1,5 +1,6 @@
 <div class="container-md">
   <one-side
+    *ngIf="oneWayFlights"
     [flights]="oneWayFlights"
     type="one-way"
     (storeSelect)="storeChoise('one-way', $event)"
