--- a/src/app/passengers/components/passenger-each/passenger-each.component.html
+++ b/src/app/passengers/components/passenger-each/passenger-each.component.html
@@ -43,7 +43,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Choose a date</mat-label>
           <input matInput [matDatepicker]="picker2" formControlName="dOb" />
-          <mat-hint>{{ dateFormat }}</mat-hint>
+          <mat-hint>{{ headerState.dateFormat }}</mat-hint>
           <mat-datepicker-toggle
             matIconSuffix
             [for]="picker2"
