--- a/src/app/user-authentication/register/register.component.html
+++ b/src/app/user-authentication/register/register.component.html
@@ -76,7 +76,7 @@
               [matDatepicker]="picker2"
               formControlName="dateOfBirth"
             />
-            <mat-hint>{{ dateFormat }}</mat-hint>
+            <mat-hint>{{ headerState.dateFormat }}</mat-hint>
             <mat-datepicker-toggle
               matIconSuffix
               [for]="picker2"
