--- a/src/app/passengers/components/passenger-each/passenger-each.component.html
+++ b/src/app/passengers/components/passenger-each/passenger-each.component.html
@@ -1,9 +1,10 @@
 <div class="container--form">
   <div class="d-flex flex-column" [formGroup]="control">
-    <span>{{ count }}</span>
     <div
       class="d-flex align-items-between justify-content-between w-100 flex-wrap"
     >
+      <span class="count">{{ count }}.</span>
+
       <mat-form-field>
         <input
           autofocus
