--- a/src/app/passengers/passengers-view/passengers-view.component.html
+++ b/src/app/passengers/passengers-view/passengers-view.component.html
@@ -1,12 +1,21 @@
 <form class="container" [formGroup]="passengersForm" (submit)="onSubmit()">
-  <div *ngFor="let passenger of passengers">
-    <h1>{{ passenger === "child" ? "children" : passenger + "s" }}:</h1>
-    <div>
-      <!-- to do nice appereance -->
-      <button (click)="addMember(passenger)">+</button>
-      <button (click)="removeMember(passenger)">-</button>
-    </div>
-    <div formArrayName="adult">
+  <mat-card *ngFor="let passenger of passengers">
+    <mat-card-header>
+      <mat-card-title>
+        <h1>{{ passenger === "child" ? "children" : passenger + "s" }}:</h1>
+        <div class="controls">
+          <!-- to do nice appereance -->
+          <button mat-mini-fab color="primary" (click)="addMember(passenger)">
+            <mat-icon>plus_one</mat-icon>
+          </button>
+          <button mat-mini-fab color="warn" (click)="removeMember(passenger)">
+            <mat-icon>remove</mat-icon>
+          </button>
+        </div>
+      </mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content [formArrayName]="passenger">
       <passenger-each
         *ngFor="
           let control of passengersForm.controls[passenger].controls;
@@ -15,8 +24,8 @@
         [count]="i + 1"
         [control]="control"
       ></passenger-each>
-    </div>
-  </div>
+    </mat-card-content>
+  </mat-card>
 
   <div class="row justify-content-end text-center">
     <a style="width: 80px" routerLink=".." class="btn btn-warning me-3">back</a>
