--- a/src/app/core/progress-bar/progress-bar.component.html
+++ b/src/app/core/progress-bar/progress-bar.component.html
@@ -8,12 +8,14 @@
   class="progress--bar d-flex align-items-center justify-content-between flex-wrap"
 >
   <div class="first--step d-flex">
-    <img class="img__prigress--bar"
+    <img
+      class="img__prigress--bar"
       *ngIf="userOnBookingPage"
       src="../../../assets/Steps-inProgress.png"
       alt="inProgress"
     />
-    <img class="img__prigress--bar"
+    <img
+      class="img__prigress--bar"
       *ngIf="!userOnBookingPage"
       src="../../../assets/Steps-complete.png"
       alt="done"
@@ -24,17 +26,20 @@
     <img src="../../../assets/Steps-Divider.png" alt="divider" />
   </div>
   <div class="second--step d-flex">
-    <img class="img__prigress--bar"
+    <img
+      class="img__prigress--bar"
       *ngIf="userOnPassangersPage"
       src="../../../assets/Steps-inProgress.png"
       alt="inProgress"
     />
-    <img class="img__prigress--bar"
+    <img
+      class="img__prigress--bar"
       *ngIf="userOnSummaryPage || userOnShoppingCartPage"
       src="../../../assets/Steps-complete.png"
       alt="done"
     />
-    <img class="img__prigress--bar"
+    <img
+      class="img__prigress--bar"
       *ngIf="userOnBookingPage"
       src="../../../assets/Steps-second.png"
       alt="two"
@@ -47,17 +52,20 @@
 
   <div class="third--step d-flex align-items-center">
     <div class="d-flex" style="height: 24px">
-      <img class="img__prigress--bar"
+      <img
+        class="img__prigress--bar"
         *ngIf="userOnSummaryPage"
         src="../../../assets/Steps-inProgress.png"
         alt="inProgress"
       />
-      <img class="img__prigress--bar"
+      <img
+        class="img__prigress--bar"
         *ngIf="userOnShoppingCartPage"
         src="../../../assets/Steps-complete.png"
         alt="done"
       />
-      <img class="img__prigress--bar"
+      <img
+        class="img__prigress--bar"
         *ngIf="userOnPassangersPage || userOnBookingPage"
         src="../../../assets/Steps-third.png"
         alt="three"
