add phone and country for passangers

--- a/src/app/user-authentication/register/register.component.html
+++ b/src/app/user-authentication/register/register.component.html
@@ -141,13 +141,13 @@
              matInput
              formControlName="telephone"
              [value]="phoneNumber"
-           />
-           <mat-hint>{{ phoneNumber }} - (xxx-xxx-xxxx)</mat-hint>
-           <mat-error *ngIf="checkValidation('phone')">
-            {{ fieldRequired }}
-          </mat-error>
+             />
+             <mat-hint>{{ phoneNumber }}-***-***-****</mat-hint>
+           <mat-error *ngIf="checkValidation('telephone')">
+             {{ phoneErrors() }}
+            </mat-error>
           </mat-form-field>
-         
+         <br>
           
         
         <mat-checkbox required formControlName="termsAndServices">
