--- a/src/app/passengers/components/passenger-contact-info/passenger-contact-info.component.html
+++ b/src/app/passengers/components/passenger-contact-info/passenger-contact-info.component.html
@@ -13,9 +13,33 @@
         placeholder="Email *"
         formControlName="email"
       />
-      <mat-error *ngIf="checkValidation('email')">
-        {{ emaiErrors() }}
-      </mat-error>
+      
     </mat-form-field>
+    <mat-error *ngIf="checkValidation('email')">
+      {{ emaiErrors() }}
+    </mat-error>
+    <mat-select-country formControlName="country"
+    [itemsLoadSize]="5"
+    (onCountrySelected)="onCountrySelected($event)"
+    >
+       </mat-select-country>
+       <mat-error *ngIf="checkValidation('country')">
+        {{ fieldRequired }}
+      </mat-error>
+       <mat-form-field appearance="fill" 
+       *ngIf="phoneNumber!=''"
+       >
+       <mat-label>Choose a date</mat-label>
+       <input
+         matInput
+         formControlName="telephone"
+         [value]="phoneNumber"
+         />
+         <mat-hint>{{ phoneNumber }}-***-***-****</mat-hint>
+       <mat-error *ngIf="checkValidation('telephone')">
+         {{ phoneErrors() }}
+        </mat-error>
+      </mat-form-field>
+     <br>
   </div>
 </div>
