--- a/src/app/passengers/passengers-view/passengers-view.component.html
+++ b/src/app/passengers/passengers-view/passengers-view.component.html
@@ -31,7 +31,7 @@
     [control]="passengersForm.controls.contact"
   ></app-passenger-contact-info>
 
-  <!-- <p>{{ passengersForm.value | json }}/p></p> -->
+  <p>{{ passengersForm.value | json }}/p></p>
 
   <div class="row justify-content-end text-center">
     <a style="width: 80px" routerLink=".." class="btn btn-warning me-3">back</a>
