proposed fix for auth form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="posAbs">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
+
+  <div
+    (click)="onHideOverlay($event)"
+    *ngIf="headerState.showAuth"
+    class="overlay"
+  >
+    <div class="custom">
+      <app-authentication-form-container></app-authentication-form-container>
+    </div>
+  </div>
+</div>
