--- a/src/app/main-page/components/content-main/content-main.component.html
+++ b/src/app/main-page/components/content-main/content-main.component.html
@@ -1,7 +1,4 @@
-<div class="container-fluid posAbs">
+<div class="container-fluid">
   <app-flights-form></app-flights-form>
   <br />
-  <div *ngIf="headerState.showAuth" class="container custom">
-    <app-authentication-form-container></app-authentication-form-container>
-  </div>
 </div>
