--- a/src/app/passengers/components/passenger-contact-info/passenger-contact-info.component.html
+++ b/src/app/passengers/components/passenger-contact-info/passenger-contact-info.component.html
@@ -4,8 +4,11 @@
   your flight.
 </p>
 <div class="container--form">
-  <div class="d-flex flex-column" [formGroup]="control">
-    <mat-form-field class="col-3">
+  <div
+    class="d-flex flex-column justify-content-between align-items-center flex-md-row flex-wrap"
+    [formGroup]="control"
+  >
+    <mat-form-field style="width: 240px">
       <input
         autofocus
         type="email"
@@ -13,33 +16,35 @@
         placeholder="Email *"
         formControlName="email"
       />
-      
+      <mat-error *ngIf="checkValidation('email')">
+        {{ emaiErrors() }}
+      </mat-error>
     </mat-form-field>
-    <mat-error *ngIf="checkValidation('email')">
-      {{ emaiErrors() }}
-    </mat-error>
-    <mat-select-country formControlName="country"
-    [itemsLoadSize]="5"
-    (onCountrySelected)="onCountrySelected($event)"
+
+    <mat-select-country
+      style="width: 240px !important"
+      formControlName="country"
+      [itemsLoadSize]="5"
+      (onCountrySelected)="onCountrySelected($event)"
     >
-       </mat-select-country>
-       <mat-error *ngIf="checkValidation('country')">
+      <mat-error *ngIf="checkValidation('country')">
         {{ fieldRequired }}
       </mat-error>
-       <mat-form-field appearance="fill" 
-       *ngIf="phoneNumber!=''"
-       >
-       <mat-label>Choose a date</mat-label>
-       <input
-         matInput
-         formControlName="telephone"
-         [value]="phoneNumber"
-         />
-         <mat-hint>{{ phoneNumber }}-***-***-****</mat-hint>
-       <mat-error *ngIf="checkValidation('telephone')">
-         {{ phoneErrors() }}
-        </mat-error>
-      </mat-form-field>
-     <br>
+    </mat-select-country>
+
+    <mat-form-field
+      style="width: 240px"
+      appearance="fill"
+      *ngIf="phoneNumber != ''"
+    >
+      <mat-label>Choose a date</mat-label>
+      <input matInput formControlName="telephone" [value]="phoneNumber" />
+      <mat-hint>{{ phoneNumber }}-***-***-****</mat-hint>
+      <mat-error *ngIf="checkValidation('telephone')">
+        {{ phoneErrors() }}
+      </mat-error>
+    </mat-form-field>
+    <br />
+    <br />
   </div>
 </div>
