--- a/src/app/passengers/passengers-view/passengers-view.component.html
+++ b/src/app/passengers/passengers-view/passengers-view.component.html
@@ -35,7 +35,12 @@
 
   <div class="row justify-content-end text-center">
     <a style="width: 80px" routerLink=".." class="btn btn-warning me-3">back</a>
-    <button style="width: 100px" type="submit" class="btn btn-success me-3">
+    <button
+      [disabled]="passengersForm.invalid"
+      style="width: 100px"
+      type="submit"
+      class="btn btn-success me-3"
+    >
       continue
     </button>
   </div>
