fix phone validation

--- a/src/app/passengers/components/passenger-contact-info/passenger-contact-info.component.html
+++ b/src/app/passengers/components/passenger-contact-info/passenger-contact-info.component.html
@@ -38,7 +38,13 @@
       *ngIf="phoneNumber != ''"
     >
       <mat-label>Choose a date</mat-label>
-      <input matInput formControlName="telephone" [value]="phoneNumber" />
+      <input
+        matInput
+        type="text"
+        formControlName="telephone"
+        [value]="phoneNumber"
+        (keydown)="onTelephoneKeydown($event)"
+      />
       <mat-hint>{{ phoneNumber }}-***-***-****</mat-hint>
       <mat-error *ngIf="checkValidation('telephone')">
         {{ phoneErrors() }}
