feat: move auth to main view

--- a/src/app/main-page/components/content-main/content-main.component.html
+++ b/src/app/main-page/components/content-main/content-main.component.html
@@ -2,3 +2,12 @@
   <app-flights-form></app-flights-form>
   <br />
 </div>
+<div
+  (click)="onHideOverlay($event)"
+  *ngIf="headerState.showAuth"
+  class="overlay"
+>
+  <div class="custom">
+    <app-authentication-form-container></app-authentication-form-container>
+  </div>
+</div>
