--- a/src/app/passengers/passengers-view/passengers-view.component.html
+++ b/src/app/passengers/passengers-view/passengers-view.component.html
@@ -40,6 +40,7 @@
       style="width: 100px"
       type="submit"
       class="btn btn-success me-3"
+      [disabled]="passengersForm.invalid"
     >
       continue
     </button>
