fix: add loging to search-flights page & remove auth token for flight data

--- a/src/app/booking/booking-view/booking-view.component.html
+++ b/src/app/booking/booking-view/booking-view.component.html
@@ -1,2 +1,3 @@
 <app-flights-search-input></app-flights-search-input>
 <app-flights-search-result></app-flights-search-result>
+<app-authentication-form-container></app-authentication-form-container>
